# advent_of_code

./: .gitattributes  .gitignore  AOC_DOWNLOAD_GUIDE.md  README.md  __init__.py  aoc.py  linereader.py  pyproject.toml  readme_generator.py
advent_of_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/: aoc.py  aoc_downloader.py  constants.py  create_next_day.py  metadata.py  readme_generator.py
common/: __init__.py  aoc_downloader.py  create_next_day.py  day.py  grid.py  grid_printer.py  meta.py  parsing.py  solution.py
lib/: __init__.py  point2d.py  point3d.py
year2015/: README.md  metadata.json  metadata.py
year2019/: README.md  __init__.py  computer.py  metadata.py  util.py
year2019/1/: b.py  part1.py
year2019/2/: a.py
year2019/3/: part1.py
year2019/4/: a.py
year2019/5/: a.py  part2.py
year2019/7/: a.py
year2021/: README.md  __init__.py  metadata.json  metadata.py
year2021/1/: part1.py  part2.py
year2021/10/: part1.py
year2021/12/: a.py
year2021/13/: a.py
year2021/14/: a.py
year2021/15/: part1.py
year2021/2/: b.py  part1.py  part2.py
year2021/3/: b.py  part1.py
year2021/4/: a.py  part2.py
year2021/5/: a.py  part1.py
year2021/6/: a.py
year2021/8/: a.py  part1.py
year2021/9/: b.py  part1.py  part2.py
year2022/: README.md  __init__.py  metadata.py
year2022/1/: a.py
year2022/2/: a.py  b.py  part1.py
year2022/3/: part1.py
year2025/: README.md  metadata.py
year2025/1/: a.py  b.py  part1.py
year2025/10/: a.py  b.py  helpers.py  part1.py
year2025/11/: a.py
year2025/12/: a.py  b.py
(+104 files in other folders)
