[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code solutions"
requires-python = ">=3.8"
authors = [
    {name = "Alojz Milicevic"}
]

[project.scripts]
aoc = "aoc:main"

[tool.setuptools]
py-modules = ["linereader", "readme_generator", "aoc"]

[tool.setuptools.packages.find]
where = ["."]
include = ["common", "lib", "year2019", "year2021", "year2022", "year2025"]
exclude = ["tmp*"]

