[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code solutions"
requires-python = ">=3.8"
authors = [
    {name = "Alojz Milicevic"}
]
dependencies = [
    "scipy>=1.10.0",
    "numpy>=1.25.0",
]

[project.scripts]
aoc = "cli.aoc:main"

[tool.setuptools]
py-modules = ["linereader"]
packages = ["cli", "common", "lib"]

